fixed alignment and color for detail cards

--- a/src/components/detail.css
+++ b/src/components/detail.css
@@ -4,6 +4,25 @@
   max-height: 20rem;
   min-width: 17rem;
   min-height: 20rem;
+  overflow-y:scroll;
+  color:white;
+  text-shadow: 1.2px 0.8px #0A0A0A;
+}
+.standard::-webkit-scrollbar-track {
+  border: 1px solid rgb(37, 128, 233);
+  padding: 2px 0;
+  background-color: #27aeec;
+}
+
+.standard::-webkit-scrollbar {
+  width: 10px;
+}
+
+.standard::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  box-shadow: inset 0 0 6px rgba(38, 128, 231, 0.3);
+  background-color: #5badf0;
+  border: 1px solid #256dda;
 }
 
 img {
@@ -25,6 +44,6 @@ img {
   margin-right: auto;
   
     width:auto;
-    height:10rem;
+    height:15rem;
     
 }
